# scout

./: .dockerignore  .env.example  .gitignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  SESSION.md  THIRD_PARTY_NOTICES.md  install-skill.sh  pyproject.toml
.claude/: launch.json
.dev-loop/run-2026-06-28-001/: 00-discovery.md  07-build-log.md  state.json
.dev-loop/run-2026-07-03-001/: 02-requirements.md  03-risk-assessment.md  06-plan.md  07-build-log.md  state.json
.development-loop/project/: BACKLOG.md  ROADMAP.md  TODO.md
.development-loop/run-2026-07-06-001/: 01-intake.md  03-spec.md  state.json
.development-loop/run-2026-07-09-001/: 01-intake.md  06-plan.md  state.json
.github/ISSUE_TEMPLATE/: private_beta_bug.yml  private_beta_feature.yml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  docker-compose.yml  nginx.conf  scout.service
docs/: app-first-ui-redesign.md  architecture.md  browser-verification-2026-05-20.md  distribution.md  execution-modes.md  frontend.md  product-to-algolia.md  target-matrix.md  use-cases.md
docs-site/: README.md  account.mdx  credits.mdx  custom.css  custom.js  destinations.mdx  docs.json  index.mdx  quickstart.mdx  support.mdx
docs-site/endpoints/: company.mdx  crawl.mdx  map.mdx  products.mdx  scrape.mdx  screenshot.mdx
docs/competetor-website-knowledge/: README.md  competitor-matrix.md  market-pricing-refresh-2026-06-29.md  market-pricing-snapshot-2026-06-28.md  pricing-and-payment-recommendation.md  production-readiness-and-distribution.md  scout-differentiation.md  scout-website-plan.md  source-index.md  website-decision-map.md  website-patterns.md
docs/decisions/: 2026-05-13-product-blocked-page-fallbacks.md  2026-05-13-standalone-package-plus-skill.md  2026-05-14-estee-lauder-hard-site-validation.md  2026-06-03-user-browser-capture-dom-products.md  2026-06-12-embedded-live-browser.md  2026-06-12-frontend-static-spa.md  2026-06-12-scout-scope-boundary.md  2026-06-13-scout-icp-and-use-case-set.md  2026-06-14-scout-as-universal-acquisition-engine.md
docs/engine/: acquisition-ladder-plan.md
scout/: cli.py  launch_decision_draft.py  launch_decision_record.py  launch_readiness.py
scout/api/: config.py  (+11 more)
scripts/: docker_image_smoke.py  founder_decision_record_check.py  founder_decision_record_draft.py  generate_dependency_license_inventory.py  generate_product_demo_gif.py  hosted_beta_signup_smoke.py  hosted_production_smoke.py  hosted_readiness_check.py  launch_readiness_check.py  license_release_gate_check.py  release_artifact_smoke.py  scout-generate-api-key  scout-hosted-admin  scout-hosted-economics  scout-hosted-load-test  scout-hosted-overview  scout-hosted-setup-report  scout-stripe-bootstrap-prices  scout-validate-hosted-config  scout-vps-configure-hosted-env  scout-vps-disable-hosted-access  scout-vps-hosted-metrics  scout-vps-list-hosted-accounts  scout-vps-list-hosted-purchases  scout-vps-list-hosted-signups  scout-vps-list-hosted-usage  scout-vps-process-pending-beta-signups  scout-vps-provision-hosted-key  scout-vps-retry-failed-beta-signups  scout-vps-send-hosted-test-email  scout-write-hosted-config-template  stripe_test_mode_smoke.py
tests/: e2e_real_websites.py  validate_endpoints.py
website/: README.md  account.html  app.html  beta.html  examples.html  guide.html  index.html  legal.html  pricing.html  privacy.html  quickstart.html  status.html  styles.css  terms.html
(+486 files in other folders)
