[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scout"
version = "0.1.0"
description = "Self-hosted web intelligence platform built on Crawl4AI"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "algoliasearch>=4.0.0",
    "crawl4ai>=0.7.7",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "tiktoken>=0.7.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
scout = "scout.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "playwright>=1.49.0",
    "pyright>=1.1.390",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit real network/browser (deselect with -m 'not integration')",
    "live: marks exhaustive live website UI tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
