[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scout-web"
version = "0.1.0"
description = "Evidence-grade web acquisition and extraction toolkit built on Crawl4AI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Arijit Chowdhury" }]
keywords = [
    "Web acquisition",
    "web scraping",
    "crawl4ai",
    "product extraction",
    "competitive intelligence",
    "search indexing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiosqlite>=0.20.0",
    "algoliasearch>=4.0.0",
    "crawl4ai>=0.7.7",
    "email-validator>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "tiktoken>=0.7.0",
    "typer>=0.9.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/arijitchowdhury80/scout"
Documentation = "https://github.com/arijitchowdhury80/scout#readme"
Issues = "https://github.com/arijitchowdhury80/scout/issues"

[project.scripts]
scout = "scout.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "playwright>=1.49.0",
    "pyright>=1.1.390",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit real network/browser (deselect with -m 'not integration')",
    "live: marks exhaustive live website UI tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["scout"]

[tool.hatch.build.targets.wheel.force-include]
website = "website"
"THIRD_PARTY_NOTICES.md" = "THIRD_PARTY_NOTICES.md"
"docs/product" = "docs/product"
"docs/legal" = "docs/legal"
"docs/security" = "docs/security"
"pyproject.toml" = "pyproject.toml"

[tool.mypy]
python_version = "3.11"
strict = true
